--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -504,6 +504,72 @@
    "source": [
     "' 123 '.strip()#.isdigit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b29bf612-badf-4e5c-abf3-59e05308c630",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0c834d7-d3d4-4738-ad3d-6b8203f251f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "306fbda4-6abf-4ef0-9c0a-7a1428e865c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'b', 'a']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "list(np.take(['a','b','c'], [2,1,0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ba077107-acb2-434a-a79e-5311805fad67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "Point = namedtuple('Point', ['x', 'y'])\n",
+    "\n",
+    "temp_dict = {'x': 40, 'y': 30}\n",
+    "p1 = Point(**temp_dict)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
