db 주석 해제, 파라미터 변경

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -888,6 +888,45 @@
     "sql = f\"INSERT INTO {table_name}({keys_str}) VALUES ({values_str})\"\n",
     "sql"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e208f7c7-1290-4504-821f-80176d77d265",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5321e0b4-e078-4196-b7c9-65d223651f61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62450a2c-8a7c-4a9d-a47e-9e7b38648198",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8f10d918-6fed-43cf-a106-8be21bb0d509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "img_bgr = cv2.imread(\"./temp/fire.jpg\")\n",
+    "cv2.imshow(\"test\", img_bgr)\n",
+    "cv2.waitKey(10000)\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
